add 4072pj1 link

--- a/config/content.htm
+++ b/config/content.htm
@@ -3,14 +3,13 @@
 <p>強化學習在機電系統設計中之應用</p>
 <p>Application of reinforcement learning in mechatronic systems</p>
 <p>討論區: <a href="https://github.com/mdecourse/4072pj1/discussions">https://github.com/mdecourse/4072pj1/discussions</a></p>
-<p>PDF: https://github.com/mdecourse/4072pj1/blob/master/LaTeX%E5%A0%B1%E5%91%8A/4072pj1.pdf</p>
+<p>PDF:<a href="/downloads/4072pj1.pdf">4072pj1.pdf</a></p>
 <p>組員:</p>
 <p style="padding-left: 30px;">40723110</p>
 <p style="padding-left: 30px;">40723115</p>
 <p style="padding-left: 30px;">40723138</p>
 <p style="padding-left: 30px;">40723148</p>
-<p style="padding-left: 30px;">40723150</p>
-<h2>專題定位</h2>
+<p style="padding-left: 30px;">40723150</p><h2>專題定位</h2>
 <p>2021/01/08</p>
 <p style="padding-left: 30px;">Adagrad: <a href="/downloads/2011_Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf">2011_Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf</a></p>
 <p style="padding-left: 30px;"><a href="/downloads/2012_ADADELTA AN ADAPTIVE LEARNING RATE METHOD.pdf">2012_ADADELTA AN ADAPTIVE LEARNING RATE METHOD.pdf</a></p>
