--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,12 +3,14 @@
 <p>強化學習在機電系統設計中之應用</p>
 <p>Application of reinforcement learning in mechatronic systems</p>
 <p>討論區: <a href="https://github.com/mdecourse/4072pj1/discussions">https://github.com/mdecourse/4072pj1/discussions</a></p>
+<p>PDF: <a href="https://github.com/mdecourse/4072pj1/blob/master/LaTeX%E5%A0%B1%E5%91%8A/4072pj1.pdf">https://github.com/mdecourse/4072pj1/blob/master/LaTeX%E5%A0%B1%E5%91%8A/4072pj1.pdf</a></p>
 <p>組員:</p>
 <p style="padding-left: 30px;">40723110</p>
 <p style="padding-left: 30px;">40723115</p>
 <p style="padding-left: 30px;">40723138</p>
 <p style="padding-left: 30px;">40723148</p>
-<p style="padding-left: 30px;">40723150</p><h2>專題定位</h2>
+<p style="padding-left: 30px;">40723150</p>
+<h2>專題定位</h2>
 <p>2021/01/08</p>
 <p style="padding-left: 30px;">Adagrad: <a href="/downloads/2011_Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf">2011_Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf</a></p>
 <p style="padding-left: 30px;"><a href="/downloads/2012_ADADELTA AN ADAPTIVE LEARNING RATE METHOD.pdf">2012_ADADELTA AN ADAPTIVE LEARNING RATE METHOD.pdf</a></p>
@@ -298,7 +300,7 @@ sudo certbot renew --dry-run</pre>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VMp6pq6_QjI" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/MlFZjLkEIEw" width="560"></iframe></p>
 <p>以下為 convnet javascript 應用</p>
-<!-- import convnetjs library -->
+<p><a href='/"https:/github.com/mdecourse/4072pj1/blob/master/LaTeX%E5%A0%B1%E5%91%8A/4072pj1.pdf&lt;/a'><!-- import convnetjs library -->
 <script src="/downloads/convnet-min.js"></script>
 <!-- javascript goes here -->
 <script type="text/javascript">
@@ -321,6 +323,7 @@ function start() {
 <script>
 window.onload=start();
 </script>
+</a></p>
 <h2>電腦</h2>
 <p><a href="https://drive.google.com/file/d/1AaOdJdZPNiD3YE5kgNcIrLK7ic0qsme1/view?usp=sharing">專題可攜 22GB.7z</a></p>
 <p>電腦輔助設計室 2016 更換的<a href="http://project.mde.tw/blog/yen-dian-nao-fu-zhu-she-ji-shi-dian-nao-pei-zhi.html">電腦硬體</a>:</p>
@@ -1115,7 +1118,8 @@ print (result)
 <p style="text-align: right;">[<a href="/downloads/pong2_vs_pong1.2.pdf">pong2_vs_pong1.2.pdf</a>]</p>
 <p style="text-align: left;"><img caption="false" height="500" src="/images/pong1_vs_pong1.2_reward.png" width="667"/></p>
 <p style="text-align: left;"></p>
-<p></p><h2>Markov</h2>
+<p></p>
+<h2>Markov</h2>
 <h4>Markov Chain</h4>
 <p>當前決策只會影響下個狀態，當前狀態轉移(action)到其他狀態的機率有所差異。</p>
 <h4>Markov Reward Process</h4>
@@ -1437,7 +1441,8 @@ params = params − learning_rate ∗ params_grad
 <p>Pong control</p>
 <p>將pong1.2訓練好的模型丟回到gym，讓訓練好的模型和gmy內建AI對打。</p>
 <p>目前訓練結果平均值不會超過15分。</p>
-<p></p><h2>RL-Pong Game</h2>
+<p></p>
+<h2>RL-Pong Game</h2>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">import pygame
 import random , sys
 from pygame.locals import *
@@ -1762,7 +1767,8 @@ while True:
   if reward != 0:
     print (('round %d game finished, reward: %f' % (episode_number, reward)) + ('' if reward == -1 else ' !!!!!!!!'))</pre>
 <p></p>
-<p></p><h1>Ref</h1>
+<p></p>
+<h1>Ref</h1>
 <h2>Flutter</h2>
 <p>Flutter 與 Android sdk 版本差異問題解決: <a href="https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986">https://stackoverflow.com/questions/60440509/android-command-line-tools-sdkmanager-always-shows-warning-could-not-create-se/61613986#61613986</a></p>
 <p>Flask 與 ML 系統在後端, Flutter 作為前端</p>
