--- a/content/About.html
+++ b/content/About.html
@@ -138,14 +138,13 @@ img.add_border {
 <p>強化學習在機電系統設計中之應用</p>
 <p>Application of reinforcement learning in mechatronic systems</p>
 <p>討論區: <a href="https://github.com/mdecourse/4072pj1/discussions">https://github.com/mdecourse/4072pj1/discussions</a></p>
-<p>PDF: https://github.com/mdecourse/4072pj1/blob/master/LaTeX%E5%A0%B1%E5%91%8A/4072pj1.pdf</p>
+<p>PDF:<a href="./../downloads/4072pj1.pdf">4072pj1.pdf</a></p>
 <p>組員:</p>
 <p style="padding-left: 30px;">40723110</p>
 <p style="padding-left: 30px;">40723115</p>
 <p style="padding-left: 30px;">40723138</p>
 <p style="padding-left: 30px;">40723148</p>
-<p style="padding-left: 30px;">40723150</p>
-<br /> <a href='專題定位.html'>Next</a> >> 專題定位</div>
+<p style="padding-left: 30px;">40723150</p><br /> <a href='專題定位.html'>Next</a> >> 專題定位</div>
         
     <!-- footer -->
       <div class="container">
