--- a/reveal/index.html
+++ b/reveal/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 <title>
-CMSimfly 網際內容管理
+Application of reinforcement learning in mechatronic systems
 </title>
     <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
     <meta name="author" content="Hakim El Hattab">
@@ -39,16 +39,16 @@ CMSimfly 網際內容管理
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## CMSimfly 網際內容管理
+## 強化學習在機電系統中之應用
 
-### KMOLab
+### Application of reinforcement learning in mechatronic systems
+
+
+專題組別：[第13組](http://mde.tw/4072pj1)
 
 <small>
-Created by [KMOLab](http://lab.kmol.info/)
+[書面報告](./../downloads/4072pj1.pdf)
 </small>
-
-[CMSimfly 網誌](./../blog/index.html)
-
 
     </script>
 </section>
