--- a/content/index.html
+++ b/content/index.html
@@ -135,7 +135,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='專題定位.html'>Next</a> >> 專題定位<br /><h1>About</h1>
 <p>專題題目: </p>
-<p>強化學習在機電系統設計中之應用</p>
+<p>強化學習在機電系統中之應用</p>
 <p>Application of reinforcement learning in mechatronic systems</p>
 <p>討論區: <a href="https://github.com/mdecourse/4072pj1/discussions">https://github.com/mdecourse/4072pj1/discussions</a></p>
 <p>PDF:<a href="./../downloads/4072pj1.pdf">4072pj1.pdf</a></p>
@@ -144,7 +144,10 @@ img.add_border {
 <p style="padding-left: 30px;">40723115</p>
 <p style="padding-left: 30px;">40723138</p>
 <p style="padding-left: 30px;">40723148</p>
-<p style="padding-left: 30px;">40723150</p><br /> <a href='專題定位.html'>Next</a> >> 專題定位</div>
+<p style="padding-left: 30px;">40723150</p>
+<div id="gtx-trans" style="position: absolute; left: 116px; top: 54.4792px;">
+<div class="gtx-trans-icon"></div>
+</div><br /> <a href='專題定位.html'>Next</a> >> 專題定位</div>
         
     <!-- footer -->
       <div class="container">
