update reveal content

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -146,7 +146,19 @@ Application of reinforcement learning in mechatronic systems
 <!-- 請注意, @others 不可以內縮 -->
 ### 類神經網路
 
-<img src="./../images/兩層神經網路.png" alt="兩層神經網路" height="550">
+<img src="./../images/類神經網路架構.png" alt="神經網路" height="550">
+    </script>
+</section>
+
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+### 類神經網路
+
+<img src="./../images/類神經網路關係.png" alt="類神經網路關係" wight="500">
     </script>
 </section>
 
@@ -295,7 +307,8 @@ Application of reinforcement learning in mechatronic systems
 <!-- 請注意, @others 不可以內縮 -->
 ### 訓練結果
 
-<img src="./../images/openaigym.video.0.1660.video000001.gif" alt="訓練結果" height="550">
+<img src="./../images/pong2_500.gif" alt="訓練500次結果" height="550">
+<img src="./../images/openaigym.video.0.1660.video000001.gif" alt="28.9K次訓練結果" height="550">
     </script>
 </section>
 
